# sdl

./: CMakeLists.txt  README.md
sdl-1.2.15/VisualC/: UpgradeLog.htm
sdl-1.2.15/VisualC/SDL/: SDL.vcxproj
sdl-1.2.15/VisualC/SDL/x64/Release/SDL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SDL.lastbuildstate  lib.command.1.tlog
sdl-1.2.15/VisualC/SDLmain/: SDLmain.vcxproj
sdl-1.2.15/VisualC/SDLmain/x64/Release/: SDLmain.lib
sdl-1.2.15/VisualC/SDLmain/x64/Release/SDLmain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
sdl-1.2.15/VisualC/x64/Release/: SDL.lib
sdl-1.2.15/include/: SDL_config.h
